syntax = "proto3";

option csharp_namespace = "Server.protos";


service PuppetMasterServices {
    rpc ServerRequest (ServerRequestObject) returns (ServerResponseObject) {} //PCS
    rpc StatusRequest (StatusRequestObject) returns (StatusResponseObject) {} //Server
    rpc ClientRequest (ClientRequestObject) returns (ClientResponseObject) {} //PCS
    rpc CrashRequest (CrashRequestObject) returns (CrashResponseObject) {} //Server
    rpc FreezeRequest (FreezeRequestObject) returns (FreezeResponseObject) {} //Server
    rpc UnfreezeRequest (UnfreezeRequestObject) returns (UnfreezeResponseObject) {} //Server
}

message ServerRequestObject {
    string server_id = 1;
    int32 min_delay = 2;
    int32 max_delay = 3;
    string url = 4;
    repeated PartitionMessage everypartition = 5;
}

message PartitionMessage {
    string id = 1;
    string masterId = 2;
}

message ServerResponseObject {
    string success = 1;
}

message StatusRequestObject {
}

message StatusResponseObject {
    string success = 1;
}


message ClientRequestObject {
    string username = 1;
    string client_url = 2;
    string scriptfile = 3;
    repeated PartitionMessage everypartition = 4;
} 

message ClientResponseObject {
    string succes = 1;
}

message CrashRequestObject {

}

message CrashResponseObject {
    string success = 1;
}

message FreezeRequestObject {

}

message FreezeResponseObject {
    string success = 1;
}

message UnfreezeRequestObject {

}

message UnfreezeResponseObject {
    string success = 1;
}